--- a/Q1_answer.tex
+++ b/Q1_answer.tex
@@ -1,5 +1,5 @@
-\chapter*{Question 1}
-\addcontentsline{toc}{chapter}{Question 1}
+\section{Q1 --- Networked Sensor Device for tracking}
+\addcontentsline{toc}{section}{Q1 --- Networked Sensor Device for tracking}
 
 We need a sensor device to track assets (vehicles and animals) in two wildlife parks:
 
@@ -8,12 +8,12 @@ We need a sensor device to track assets (vehicles and animals) in two wildlife p
   \item \textbf{Mpala Research Center}, Kenya
 \end{itemize}
 
-% - Knuthenborg: 1,600 acres, Denmark (lat/lon 54.811358, 11.5082552)
-% - Mpala Research Center: 48,000 acres, Kenya (lat/lon 0.2882139, 36.9017593)
+% - Knuthenborg: 1,600 acres, Denmark (Lat/Lon 54.811358, 11.5082552)
+% - Mpala Research Center: 48,000 acres, Kenya (Lat/Lon 0.2882139, 36.9017593)
 The parks are large, and the devices must be able to track the location of the assets with a high degree of accuracy. The devices will be used to monitor the animals' movements and behavior, as well as to track the vehicles used for research and conservation efforts.
 The parks are located in different parts of the world, and the devices must be able to operate in different environments. The devices must be able to withstand harsh weather conditions, including extreme temperatures, rain, and dust. The devices must also be able to operate in remote areas with limited access to power and communication networks.
 
-\subsubsection{Functional requirements}
+\subsection{Functional requirements}
 % The devices must be able to measure acceleration, particulate matter concentration, and track location. The devices must also be able to record data every hour and preferably report it in real-time.
 
 \begin{itemize}
@@ -23,7 +23,7 @@ The parks are located in different parts of the world, and the devices must be a
   \item Record data every hour (preferably real-time reporting)
 \end{itemize}
 
-\subsubsection{Non-functional requirements}
+\subsection{Non-functional requirements}
 The devices must have an accuracy of at least 500 meters. Apart from that we need to consider environmental conditions, battery life, size, and cost.
 
 Given that the devices will be used in wildlife parks, they must be able to withstand extreme temperatures, rain, and dust. Knuthenborg Safari Park is located in Denmark, where temperatures in worst case can drop to -20 degrees Celsius in winter and have hot humid summers. Mpala Research Center is located in Kenya, where temperatures can reach close to 40 degrees Celsius in summer. 
@@ -49,9 +49,25 @@ For the acceleration we can would want to use a accelerometer. An accelerometer 
 \textbf{Particulate matter concentration}
 For the particulate matter concentration we can use a laser particle counter. The laser particle counter is a small device that can measure the concentration of particulate matter in the air. It uses a laser to detect particles in the air and can provide real-time data on the concentration of particulate matter.
 
-\textbf{Location tracking}
-% For Knuthenborg Safari Park we might want to use a GSM module. The GSM module is a small device that can provide real-time location data using the GSM network. It uses cellular signals to determine the location of the device and can provide accurate location data even in remote areas. An example of a GSM module is the SIM800L, which has a size of 25mm x 23mm x 3mm, consumes 20mA at 3.7V, and has an accuracy of 500m.
-For the location tracking we can use a GPS module. The GPS module is a small device that can provide real-time location data. It uses satellite signals to determine the location of the device and can provide accurate location data even in remote areas. An example of a GPS module is the u-blox NEO-6M
+\textbf{Location tracking and Embedded board}
+For the location tracking we can use a GPS module. The GPS module is a small device that can provide real-time location data. It uses satellite signals to determine the location of the device and can provide accurate location data even in remote areas, like Mpala. An example of a GPS module is the U-Blox NEO-6M.
+
+For the embedded board we could consider using something existing like the TTGO T-Beam. The TTGO T-Beam is a small, low-power embedded board that can be used for IoT applications. It has a built-in GPS module and LoRaWAN connectivity, making it ideal for tracking applications. The board is small (16mm x 12mm x 2.5mm) and has a low power consumption of 50mA at 3.3V. It also has an accuracy of 2.5m, which is sufficient for our needs.
 %, which has a size of 16mm x 12mm x 2.5mm, consumes 50mA at 3.3V, and has an accuracy of 2.5m.
 % https://github.com/HikariBoy/TTGO-Tbeam-Ultra-Low-Power-Modification
 % ~192 mA and ~2.25 mA in sleep mode.
+% Options:
+% - Custom LoRaWAN network
+% - Mesh t a s t i c
+% - Bluetooth/Wi-Fi
+
+\subsubsection{Power supply}
+The device will mainly be powered by a rechargeable lithium-ion battery. The battery should be able to provide power for at least 0.5 years of operation. 
+
+
+For additional power supply, we can consider energy harvesting. 
+A common source would be using a solar panel. A possible issue would be that the device is not always exposed to sunlight, especially in the case of animals that might cover the cell from the sun with their body, fur or dirt.
+
+
+The device will also have a solar panel to recharge the battery when it is exposed to sunlight. The solar panel will be able to provide enough power to keep the battery charged even in low-light conditions.
+
