--- a/Q2_answer.tex
+++ b/Q2_answer.tex
@@ -1,9 +1,22 @@
-\chapter*{Question 2}
-\addcontentsline{toc}{chapter}{Question 2}
-% Please add your answer to Question 2 here.
-% You can add text, figures, tables, etc.
-% For example:
-% \section{Part A}
-% ...
-% \section{Part B}
-% ...
+\section{Question 2}
+\addcontentsline{toc}{section}{Question 2}
+% Now consider a complete monitoring system based on the sensor devices you
+% designed in Q1.
+% A) Describe the system architecture and motivate your design choices. Include
+% a system diagram describing the full system and data flow from sensor
+% device to analytics application.
+% B) Discuss the role of analytics, including machine learning and forecasting, in
+% your design. You should include the type of data to be processed and the
+% location of data analytics within your system.
+% i. Which decisions or ratings do you assume to be of interest, based on
+% your data analytics?
+%    Does a higher acceleration indicate a higher risk of an accident?
+%    Does a higher concentration of particulate matter indicate a higher risk of
+%    health problems?
+% ii. Could you imagine combining the sensor data with data from other
+% sources to augment your analytics? Give examples of data sources and
+% the analytics they could enhance.
+% C) Discuss the scalability of your system. E.g. How would your system adapt to
+% an increase in the number of sensor nodes, end-users, or the geographical
+% distribution of these? What are possible bottlenecks in your system design,
+% and how could they be addressed?
