--- a/Q2_answer.tex
+++ b/Q2_answer.tex
@@ -3,13 +3,14 @@
 % Now consider a complete monitoring system based on the sensor devices you
 % designed in Q1.
 % A) Describe the system architecture and motivate your design choices. Include
-% a system diagram describing the full system and data flow from sensor
-% device to analytics application.
+% a system diagram describing the full system and data flow from sensor device to analytics application.
+
 % B) Discuss the role of analytics, including machine learning and forecasting, in
-% your design. You should include the type of data to be processed and the
-% location of data analytics within your system.
-% i. Which decisions or ratings do you assume to be of interest, based on
-% your data analytics?
+% your design. You should include the type of data to be processed and the location of data analytics within your system.
+% something something about how we save power by having the nodes do the processing of data instead of sending a lot of data (tiny-ml)
+
+% i. Which decisions or ratings do you assume to be of interest, based on your data analytics?
+
 %    Does a higher acceleration indicate a higher risk of an accident?
 %    Does a higher concentration of particulate matter indicate a higher risk of
 %    health problems?
