--- a/references.bib
+++ b/references.bib
@@ -20,3 +20,11 @@
     year = {2024},
     note = {Accessed: \today}
 }
+
+@misc{lora_alliance,
+    title = {What is {LoRaWAN®}?},
+    author = {{LoRa Alliance}},
+    howpublished = {\url{https://lora-alliance.org/about-lorawan/}},
+    year = {2024},
+    note = {Accessed: \today}
+}
