--- a/Q3_answer.tex
+++ b/Q3_answer.tex
@@ -5,9 +5,12 @@
 \section{Sensor precision VS sensor accuracy}
 % A) What is the difference between sensor precision and sensor accuracy?
 
-Sensor \textbf{precision} refers to the degree to which repeated measurements under unchanged conditions show the same results. In other words, it indicates how consistent the measurements are. For example, if a sensor consistently measures the same value for a given input, it is considered precise.
+Sensor \textbf{precision} refers to the degree to which repeated measurements under unchanged conditions show the same results. In other words, it indicates how consistent the measurements are. For example, in dart if all darts land in the same area, even if that area is far from the bullseye, the sensor is precise. Precision does not imply correctness; it only indicates that the measurements are repeatable and consistent.
 
-Sensor \textbf{accuracy}, on the other hand, refers to how close a measured value is to the true value or the actual value of the quantity being measured. A sensor can be precise but not accurate if it consistently gives the same incorrect measurement. Conversely, a sensor can be accurate but not precise if it gives varying measurements that are close to the true value.
+Sensor \textbf{accuracy}, on the other hand, refers to how close a measured value is to the true value. A sensor can be precise but not accurate if it consistently gives the same incorrect measurement. Conversely, a sensor can be accurate but not precise if it gives varying measurements that are close to the true value. For example, if all darts land close to the bullseye, the sensor is accurate. Accuracy indicates correctness and reliability of the measurements.
+
+% dart analogy:
+% Imagine a dartboard where the bullseye represents the true value. If all darts land close to the bullseye, the sensor is accurate. If all darts land in the same spot, even if it's far from the bullseye, the sensor is precise. If the darts are scattered around the board but average out to the bullseye, the sensor is accurate but not precise.
 
 \subsection{MQTT and it's role in IoT}
 % B) What is MQTT? What role does it play in IoT?
@@ -15,7 +18,11 @@ Sensor \textbf{accuracy}, on the other hand, refers to how close a measured valu
 MQTT (Message Queuing Telemetry Transport) is a lightweight messaging protocol designed for low-bandwidth, high-latency, on unreliable networks\cite{mqtt_org}. 
 It is a publish-subscribe messaging protocol that theoretically can run over any transport protocol that ensures ordered, lossless, bi-directional connections. However, it is most commonly used over TCP/IP.
 
-MQTT plays a crucial role in IoT by providing efficient communication for resource-constrained devices. Its lightweight design minimizes bandwidth usage and power consumption, making it ideal for battery-operated sensors and actuators. The protocol's small header size and minimal network overhead allow for effective operation on unreliable networks with limited bandwidth. MQTT's quality of service options ensure message delivery even in unstable connections, while its last will feature helps detect device disconnections. These characteristics make MQTT particularly valuable in situations like smart home applications, where it reduces network noise and enables reliable communication between numerous low-power devices.
+MQTT plays a crucial role in IoT by providing efficient communication for resource-constrained devices. With MQTT devices can send data to a central server (broker) without needing to establish a two way connection or wait for a response. This is particularly beneficial for battery-powered devices, as they can send their data and then enter a low-power sleep mode, conserving energy while still maintaining connectivity.
+
+Its lightweight design minimizes bandwidth usage and power consumption, making it ideal for battery-operated devices. The protocol's small packet size and minimal overhead allow for efficient operation on bandwidth-constrained networks. MQTT's quality of service levels ensure reliable message delivery according to application needs, while its last will feature helps detect unexpected device disconnections.
+
+MQTT is particularly valuable in IoT applications because devices can publish their data to a broker without maintaining persistent connections. This publish-subscribe model enables devices to send data and then enter low-power sleep modes, significantly extending battery life while maintaining effective communication.
 
 \subsection{All relevant layers of Wi-Fi, Bluetooth, LoRa and LoRaWan and their use in IoT}
 % C) Characterize on all relevant layers Wi-Fi, Bluetooth, LoRa and LoRaWan and
@@ -23,15 +30,18 @@ MQTT plays a crucial role in IoT by providing efficient communication for resour
 
 WiFi and Bluetooth are relevant for the OSI model layers 1 (physical) and 2 (data link), while LoRa and LoRaWAN are relevant for the OSI model layers 1, 2, and 3 (network).
 
-WiFi and Bluetooth operate in the 2.4 GHz frequency band which is the the physical network layer. The data link layer is responsible for the MAC protocol, which is used to control access to the physical medium. Bluetooth uses a frequency-hopping spread spectrum (FHSS) which also is belongs to the data link layer\cite{bluetooth_protocol,wifi_osi}.
+WiFi and Bluetooth physical layer operate in the 2.4 GHz radio frequency band. The data link layer is responsible for the MAC protocol, which is used to control access to the transmission channel. Bluetooth uses a frequency-hopping spread spectrum (FHSS) which also belongs to the data link layer\cite{bluetooth_protocol,wifi_osi}.
+These technologies are typically used for short-range communication, such as connecting devices within a home or office network. The technologies are designed for high-bandwidth applications, such as video streaming and file transfer. WiFi has a range of up to 100 meters, while Bluetooth has a range of up to 10 meters. For IoT applications, WiFi and Bluetooth are often used for local communication with cameras, sensors, and other devices that require high data rates and low latency.
 
-LoRa and LoRaWAN operate in the sub-GHz frequency bands (e.g., 433 MHz, 868 MHz, 915 MHz) which is the physical network layer. The data link layer is responsible for the MAC protocol, which is used to control access to the physical medium. LoRa uses a chirp spread spectrum (CSS) which also is belongs to the data link layer. The network layer is responsible for routing packets between devices and gateways.
-
-WiFi and Bluetooth are short-range communication technologies, while LoRa and LoRaWAN are long-range communication technologies.
-
-They are used for high-bandwidth applications, such as video streaming and file transfer. WiFi has a range of up to 100 meters, while Bluetooth has a range of up to 10 meters.
+LoRa is a physical layer technology that uses Chirp Spread Spectrum (CSS) modulation to achieve long-range, low-power communication. It operates in the sub-GHz frequency bands (e.g., 433 MHz, 868 MHz, 915 MHz). 
+LoRaWAN is built on top of LoRa and adds network layer functionality. It defines the communication protocol and system architecture for the network, handling critical functions such as device authentication, data encryption, adaptive data rates, and end-to-end security\cite{lora_alliance}.
+While LoRa enables the long-distance link between devices, LoRaWAN provides the networking framework that allows multiple devices to communicate with gateways connected to the internet.
+With LoRaWAN, devices can send small amounts of data over long distances (up to 15 km in rural areas) while consuming very little power, making it ideal for remote battery-operated IoT devices.
 
 \subsection{Security features of the LoRaWAN protocol}
 % D) Name and explain security features of the LoRaWAN protocol.
 
 
+LoRaWAN has AES-128 encryption, which is a symmetric encryption algorithm that uses a 128-bit key to encrypt and decrypt data. This ensures that only authorized devices can access the data transmitted over the network/in the air.
+
+LoRaWAN also has a unique device identifier (DevEUI) and application identifier (AppEUI) for each device, which helps to identify and authenticate devices on the network. The DevEUI is a globally unique identifier assigned to each device, while the AppEUI is used to identify the application that the device is associated with.
