--- a/Q2_answer.tex
+++ b/Q2_answer.tex
@@ -2,6 +2,8 @@
 \addcontentsline{toc}{section}{Question 2}
 % Now consider a complete monitoring system based on the sensor devices you
 % designed in Q1.
+
+\section{Describe the system architecture and motivate your design choices}
 % A) Describe the system architecture and motivate your design choices. Include
 % a system diagram describing the full system and data flow from sensor device to analytics application.
 
