--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,32 @@
+@misc{kenya_climate,
+    title = {Kenya Record High and Low Temperatures},
+    author = {{Plantmaps.com}},
+    howpublished = {\url{https://www.plantmaps.com/en/ke/climate/extremes/c/kenya-record-high-low-temperatures}},
+    note = {Accessed: \today}
+}
+
+@misc{denmark_climate,
+    title = {Denmark Record High and Low Temperatures},
+    author = {{Plantmaps.com}},
+    howpublished = {\url{https://www.plantmaps.com/en/dk/climate/extremes/c/denmark-record-high-low-temperatures}},
+    note = {Accessed: \today}
+}
+
+@misc{u_blox_mia_m10q,
+    title = {{MIA-M10Q} Data Sheet},
+    author = {{u-blox}},
+    howpublished = {\url{https://content.u-blox.com/sites/default/files/documents/MIA-M10Q_DataSheet_UBX-22015849.pdf}},
+    note = {Accessed: \today}
+}
+
+@misc{adxl345,
+    title = {{ADXL345} Data Sheet},
+    author = {{Analog Devices}},
+    howpublished = {\url{https://www.analog.com/media/en/technical-documentation/data-sheets/adxl345.pdf}},
+    year = {2022},
+    note = {Accessed: \today}
+}
+
 @misc{mqtt_org,
     title = {MQTT: The Standard for IoT Messaging},
     author = {{MQTT.org}},
@@ -25,6 +54,5 @@
     title = {What is {LoRaWAN®}?},
     author = {{LoRa Alliance}},
     howpublished = {\url{https://lora-alliance.org/about-lorawan/}},
-    year = {2024},
     note = {Accessed: \today}
 }
