--- a/references.bib
+++ b/references.bib
@@ -27,6 +27,21 @@
     note = {Accessed: \today}
 }
 
+@misc{bmv080,
+    title = {{BMV080} Data Sheet},
+    author = {{Bosch Sensortec}},
+    howpublished = {\url{https://www.bosch-sensortec.com/media/boschsensortec/downloads/datasheets/bst-bmv080-ds000.pdf}},
+    year = {2025},
+    note = {Accessed: \today}
+}
+
+@misc{rak3172_datasheet,
+    title = {{RAK3172 WisDuo LoRaWAN} Module Datasheet},
+    author = {{RAK Wireless}},
+    howpublished = {\url{https://docs.rakwireless.com/product-categories/wisduo/rak3172-module/datasheet/}},
+    note = {Accessed: \today}
+}
+
 @misc{mqtt_org,
     title = {MQTT: The Standard for IoT Messaging},
     author = {{MQTT.org}},
